styles.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.container {
    display: grid;
    grid-template-columns: 1fr 4fr;
    height: 100vh;
}

.left {
    display: grid;
    grid-template-columns: 40px 1fr;
    grid-template-rows: repeat(10, 40px);
    row-gap: 10px;
    background-color: #4f46e5;
    color: white;
    font-size: 1.2rem;
    letter-spacing: 0.2rem;
    line-height: 2rem;
    grid-row: 1 / 3;
}

.right {
    display: grid;
    grid-template-rows: 60px 70px 1fr;
    background-color: #c7d2fe;
    height: 100vh;
}

.header {
    display: flex;
    background-color: #e0e7ff;
}

.hi-there {
    display: grid;
    grid-template-columns: 80px 200px 1fr 100px 100px 100px;
    grid-template-rows: 20px 1fr;
    background-color: #e0e7ff;
    column-gap: 20px;
}

.main-content-container {
    display: grid;
    grid-template-columns: 3fr 1fr;
    height: 100%;
}

.projects {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 15px;
    place-items: center;
    align-items: stretch;
    justify-items: stretch;
    height: 100%;
}

.right-hand-sidebar {
    display: grid;
    grid-template-rows: 1fr 1fr;
    row-gap: 40px;
}

.material-icons {
    width: 24px;
    grid-column: 1;
    position: relative;
    top: 5px;
    left: 7px;
}

.links {
    grid-column: 2;
}

.links:hover {
    cursor: pointer;
}

#search-icon, #notifications-icon, #profile-icon {
    font-size: 36px;
    position: static;
    width: 30px;
    height: 30px;
    margin: 12px 10px 0px 5px;
}

#search-bar {
    height: 20px;
    flex: 1;
    border-radius: 10px;
    border:#4f46e5 solid 3px;
    padding: 5px;
    margin-top: 10px;
}

#search-bar:focus {
    background-color:#e0e7ff;
}

.styled-name {
    font-size: 24px;
    font-weight: bold;
    padding: 10px;
    margin: 4px 10px 0px 5px;
}

.profile-pic {
    height: 60px;
    width: 60px;
    margin-left: 15px;
    margin-right: 15px;
}

.name-title {
    grid-column: 2;
    grid-row: 2;
}

.new-button {
    grid-column: 4;
    grid-row: 2;
    position: relative;
    bottom: 15px;
}

.upload-button {
    grid-column: 5;
    grid-row: 2;
    position: relative;
    bottom: 15px;
}

.share-button {
    grid-column: 6;
    grid-row: 2;
    position: relative;
    bottom: 15px;
}

button {
    background-color: #4f46e5;
    color: white;
    font-weight: 700;
    border-radius: 20px;
    border:#000000 solid 2px;
    height: 40px;
    width: 80px;
}

button:hover {
    opacity: 0.9;
    cursor: pointer;
}

.hi-text, .name-title {
    position: relative;
    top: 10px;
}

.card {
    display: grid;
    grid-template-rows: 30px 1fr;
    background-color: #a5b4fc;
    border:#4f46e5 solid 2px;
    border-radius: 4px;
    margin: 0px 20px 0px 20px;
}

.card-heading {
    font-size: 1.2rem;
    font-weight: bold;
}

.card-text {
    font-size: 0.8rem;
}

.announcements {
    display: grid;
    grid-template-rows: repeat(3, 50px);
    row-gap: 10px;
}

.announcement {
    border:#000000 solid 2px;
}

.trending {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    row-gap: 10px;
}

.trend {
    border: black solid 2px;
}

